--- a/To-Do-Web/todoproject.css
+++ b/To-Do-Web/todoproject.css
@@ -17,7 +17,7 @@
     width: 80%;
     height: 400vh;
     padding-top: 20%;
-    text-decoration: none;
+    
     
 }
 #task{
@@ -25,12 +25,15 @@
     font-size: 2.5rem;  
     color: #424242;
     cursor: pointer;
-    text-decoration: none;
+
 }
 #list{
     font-size: 2.5rem;
     font-weight: bold;
     color: #00A5EC;
+    
+}
+.underline{
     text-decoration: none;
 }
 .upper-container2{
